Lib projesi eklendi

--- a/GitHubProje.App/GitHubProje.App.csproj
+++ b/GitHubProje.App/GitHubProje.App.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Hasan\" />
+    <Folder Include="Deneme\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Deneme\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
