--- a/GitHubProje.App/GitHubProje.App.csproj
+++ b/GitHubProje.App/GitHubProje.App.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Deneme\" />
+	  <Folder Include="Deneme\" />
+	  <Folder Include="Hasan\" />
   </ItemGroup>
 
   <ItemGroup>
