# oguzhan folder changed

--- a/GitHubProje.App/GitHubProje.App.csproj
+++ b/GitHubProje.App/GitHubProje.App.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="obj\**" />
+    <EmbeddedResource Remove="obj\**" />
+    <None Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <Folder Include="Deneme\" />
 	  <Folder Include="Hasan\" />
   </ItemGroup>
