--- a/GitHubProje.App/GitHubProje.App.csproj
+++ b/GitHubProje.App/GitHubProje.App.csproj
@@ -8,8 +8,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="obj\Debug\net5.0-windows\.NETCoreApp,Version=v5.0.AssemblyAttributes.cs" />
+    <Compile Include="obj\Debug\net5.0-windows\GitHubProje.App.AssemblyInfo.cs" />
+    <Compile Include="obj\Release\net5.0-windows\.NETCoreApp,Version=v5.0.AssemblyAttributes.cs" />
+    <Compile Include="obj\Release\net5.0-windows\GitHubProje.App.AssemblyInfo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="obj\GitHubProje.App.csproj.nuget.dgspec.json" />
+    <Content Include="obj\project.assets.json" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <Folder Include="Deneme\" />
 	  <Folder Include="Hasan\" />
+	  <Folder Include="obj\Debug\net5.0-windows\ref\" />
+	  <Folder Include="obj\Release\net5.0-windows\ref\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="obj\Debug\net5.0-windows\GitHubProje.App.AssemblyInfoInputs.cache" />
+    <None Include="obj\Debug\net5.0-windows\GitHubProje.App.assets.cache" />
+    <None Include="obj\Debug\net5.0-windows\GitHubProje.App.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\net5.0-windows\GitHubProje.App.GeneratedMSBuildEditorConfig.editorconfig" />
+    <None Include="obj\GitHubProje.App.csproj.nuget.g.props" />
+    <None Include="obj\GitHubProje.App.csproj.nuget.g.targets" />
+    <None Include="obj\project.nuget.cache" />
+    <None Include="obj\Release\net5.0-windows\GitHubProje.App.AssemblyInfoInputs.cache" />
+    <None Include="obj\Release\net5.0-windows\GitHubProje.App.csproj.AssemblyReference.cache" />
+    <None Include="obj\Release\net5.0-windows\GitHubProje.App.GeneratedMSBuildEditorConfig.editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
